<resources>
    <string name="app_name">Szlaki turystyczne</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tempo">Twoja prędkość [km/h]:</string>
    <string name="default_speed">5</string>
    <string name="etapyString">Etapy wędrówki:</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="action_activity_title">Szlaki Turystyczne</string>
    <string name="action_title">Detail_Activity</string>
    <string name="action_share">Share</string>
    <string name="title_top">Fragment główny</string>
    <string name="home_tab">Wszystkie</string>
    <string name="tab1">Tatry</string>
    <string name="tab2">Karkonosze</string>
    <string name="image_title">Szlak</string>
    <string name="welcome">Najpiękniejsze szlaki turystyczne</string>
    <string name="autor">Wykonał: Michał Kowalewski</string>
    <string name="open_drawer">Otwórz szufladę nawigacyjną</string>
    <string name="close_drawer">Zamknij szufladę nawigacyjną</string>
    <string name="tatry">Informacje o Tatrach</string>
    <string name="karkonosze">Informacje o Karnonoszach</string>
    <string name="action_search_title">Szukaj</string>
    <string name="save">Zapisz</string>
    <string name="load">Wczytaj</string>
</resources>